make sure 'Resume' visible for different devices

--- a/css/style.css
+++ b/css/style.css
@@ -4791,7 +4791,7 @@ blockquote em, blockquote i, blockquote cite {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-position: right bottom;
+  background-position: right top;
   position: fixed;
   width: 100%;
   height: 100%;
